--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -8,8 +8,7 @@ tags: []
 ---
 
 ```{r setup, include=FALSE, message = FALSE, warning = FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center",
-                      widgetframe_self_contained = FALSE, widgetframe_isolate_widgets = TRUE)
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center")
 
 library(mapview)
 library(tidyverse)
@@ -23,8 +22,7 @@ library(ggrepel)
 library(patchwork)
 library(ggmap)
 library(ggtext)
-library(widgetframe)
-library(htmlwidgets)
+
 
 tweet_data <- read_csv("~/github/sb_sense_of_place/data/geotagged_sb_tweets_post_apr_2015.csv")
 mapviewOptions(basemaps = c("CartoDB.Positron", "OpenStreetMap"))
@@ -76,7 +74,6 @@ Twitter data was obtained freely through an established partnership between UCSB
 Crimson Hexagon only allows 10,000 randomly selected tweets to be exported, manually, at a time in .xls format. Due to this restriction, data was manually downloaded for every 2 days in order to capture all tweets (`r emo::ji('sweat')`). This took a significant amount of point and click time as you can imagine!
 
 Once downloaded, the twitter data did not contain all desired information, including whether or not the tweet was geotagged which was vital to this project. To get this information I stepped outside of my R comfort zone and used the python `twarc` library. This library can  be used to "rehydrate" twitter data using individual tweet ids, and  then store all associated tweet information as .json files. From here I was able to remove all tweets that did not have a geotag, giving a total of **79,981** tweets.
-
 
 ## Twitter data
 
@@ -156,7 +153,6 @@ leaflet(tweet_data) %>%
                    radius = 3, stroke = FALSE, fillOpacity = 0.5, clusterOptions = markerClusterOptions())
 
 #saveWidget(cluster_map, "~/github/personal_website/static/leaflet/cluster_map.html")
-#frameWidget(cluster_map, width='90%')
 ```
 
 # Defining tourists & locals
