--- a/content/post/2020-03-31-testing.Rmd
+++ b/content/post/2020-03-31-testing.Rmd
@@ -9,7 +9,7 @@ tags: []
 
 ```{r include=FALSE, eval=FALSE}
 # render magic
-rmarkdown::render("index.Rmd")
+#rmarkdown::render("index.Rmd")
 ```
 
 ```{r message=FALSE}
