--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -7,27 +7,13 @@ categories: []
 tags: []
 ---
 
-```{r setup, include=FALSE, message = FALSE, warning = FALSE}
+```{r setup, echo=FALSE, message = FALSE, warning = FALSE}
 knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center")
 
 library(mapview)
 library(tidyverse)
 library(sf)
 library(leaflet)
-library(kableExtra)
-library(sp)
-library(ggpol) #for the facet_share function
-library(RColorBrewer)
-library(ggrepel)
-library(patchwork)
-library(ggmap)
-library(ggtext)
-
-# render magic
-#rmarkdown::render("index.Rmd")
-
-tweet_data <- read_csv("~/github/sb_sense_of_place/data/geotagged_sb_tweets_post_apr_2015.csv")
-mapviewOptions(basemaps = c("CartoDB.Positron", "OpenStreetMap"))
 ```
 
 # Summary
@@ -75,61 +61,6 @@ Crimson Hexagon only allows 10,000 randomly selected tweets to be exported, manu
 
 Once downloaded, the twitter data did not contain all desired information, including whether or not the tweet was geotagged which was vital to this project. To get this information I stepped outside of my R comfort zone and used the python `twarc` library. This library can  be used to "rehydrate" twitter data using individual tweet ids, and  then store all associated tweet information as .json files. From here I was able to remove all tweets that did not have a geotag, giving a total of **79,981** tweets.
 
-## Twitter data
-
-Here is a sample of the tweet data:
-
-```{r sample_tweet_table}
-kable(sample_n(tweet_data %>% select(-user_id,  -geo_coordinates, -lat, -lon), 7)) %>%
-  kable_styling(bootstrap_options = c("striped", "condensed"), font_size = 11, fixed_thead = T)
-```
-
-### Tweets over time
-
-Almost immediately after plotting tweets over time you can see that the total number of geotagged tweets is going down over time. Most noticeably, there is a significant drop in tweets at the end of April, 2015. It seems this is due "a change in Twitter’s ‘post Tweet’ user-interface design results in fewer Tweets being geo-tagged" ( [source](https://developer.twitter.com/en/docs/tweets/data-dictionary/guides/tweet-timeline)). The first 4 months of 2015 have 15,720 tweets, or roughly 19% of all tweets. To reduce a skew in the data and remove geotagged tweets that may have been geotagged without knowledge by the user in those months, *I moved forward with all tweets from May 1, 2015 through the end of 2019*.
-
-```{r tweets_over_time}
-time_df <- read_csv("~/github/sb_sense_of_place/data/geotagged_sb_tweets.csv") %>%
-  group_by(date) %>%
-  summarize(count = n())
-
-ggplot(time_df, aes(x = date, y = count)) +
-  annotate("rect", fill = "gray80", alpha = 0.4, 
-        xmin = as.Date("2015-04-30"), xmax = as.Date("2020-01-01"),
-        ymin = -Inf, ymax = 170)  +
-  geom_line() +
-  geom_smooth() +
-  theme_minimal() +
-  geom_label(
-    data = data.frame(x = c(as.Date("2015-06-15")),
-                      y = c(215),
-                      label = c("User interface change, results in \nfewer Tweets being geo-tagged")),
-    aes(x = x, y = y, label = label), 
-    hjust = 0, 
-    lineheight = .8, 
-    size = 3,
-    inherit.aes = FALSE, 
-    label.size = 0
-  ) +
-  geom_curve(
-    data = data.frame(x = c(as.Date("2015-06-15")),
-                      y = c(214), 
-                      xend = c(as.Date("2015-04-30")),
-                      yend = c(207)),
-    mapping = aes(x = x, y = y, xend = xend, yend = yend),
-    colour = "black",
-    size = 0.5,
-    curvature = 0.05,
-    arrow = arrow(length = unit(0.01, "npc"), type = "closed"),
-    inherit.aes = FALSE) +
-  labs(x = "",
-       y = "Count",
-       title = "Number of geotagged tweets in Santa Barbara") +
-  geom_label(x = as.Date("2019-01-01"), y = 150, 
-            label = "Final dataset included tweets \nfrom April 30, 2015 onwards",
-            size = 3,   
-    label.size = 0)
-```
 
 Trying basic leaflet map
 
