--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -76,16 +76,6 @@ Crimson Hexagon only allows 10,000 randomly selected tweets to be exported, manu
 Once downloaded, the twitter data did not contain all desired information, including whether or not the tweet was geotagged which was vital to this project. To get this information I stepped outside of my R comfort zone and used the python `twarc` library. This library can  be used to "rehydrate" twitter data using individual tweet ids, and  then store all associated tweet information as .json files. From here I was able to remove all tweets that did not have a geotag, giving a total of **79,981** tweets.
 
 
-## Twitter data
-
-Here is a sample of the tweet data:
-
-```{r}
-kable(sample_n(tweet_data %>% select(-user_id,  -geo_coordinates, -lat, -lon), 7)) %>%
-  kable_styling(bootstrap_options = c("striped", "condensed"), font_size = 11, fixed_thead = T)
-```
-
-
 Trying basic leaflet map
 
 ```{r out.width = '100%'}
@@ -94,4 +84,27 @@ dc_crime <- sf::st_read("https://opendata.arcgis.com/datasets/dc3289eab3d2400ea4
 leaflet() %>% 
   addProviderTiles(providers$CartoDB.Positron)%>% 
   addCircles(data = dc_crime, color = "#800000")
+```
+
+
+### Tweet map
+
+The spatial distribution of tweets highlights areas of higher population density and tourist areas in downtown Santa Barbara.
+
+There is a single coordinate that has over 11,000 tweets reported across all years. It is near De La Vina between Islay and Valerio. There is nothing remarkable about this site so I assume it is the default coordinate when people tag "Santa Barbara" generally. The coordinate is 34.4258, -119.714.
+
+As you zoom in on the map, clusters will disaggregate. You can click on blue points to see the tweet.
+
+```{r out.width = '100%'}
+tweet_sf <- tweet_data %>%
+  st_as_sf(coords = c("lon", "lat"), remove = F) %>%
+  st_set_crs(4326)
+
+#map
+leaflet(tweet_data) %>%
+  # Base groups
+  addProviderTiles(providers$CartoDB.Positron) %>%
+  # Overlay groups %>%
+    addCircleMarkers(data = tweet_data, lng = ~lon, lat = ~lat, popup = ~full_text,
+                   radius = 3, stroke = FALSE, fillOpacity = 0.5, clusterOptions = markerClusterOptions())
 ```
