--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -8,7 +8,7 @@ tags: []
 ---
 
 ```{r setup, echo=FALSE, message = FALSE, warning = FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center")
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = FALSE, fig.align = "center", out.width = "100%")
 
 library(mapview)
 library(tidyverse)
@@ -78,7 +78,7 @@ Once downloaded, the twitter data did not contain all desired information, inclu
 
 Here is a sample of the tweet data:
 
-![](/img/tweet_table.png)
+<img src = "/img/tweet_table.png", width = "15" height = "12">
 
 ### Tweets over time
 
