--- a/content/post/2020-03-31-sense-of-place-twitter.Rmd
+++ b/content/post/2020-03-31-sense-of-place-twitter.Rmd
@@ -78,18 +78,14 @@ Once downloaded, the twitter data did not contain all desired information, inclu
 
 Here is a sample of the tweet data:
 
-```{r}
-table <-DT::datatable(sample_n(tweet_data %>% select(-user_id,  -geo_coordinates, -lat, -lon), 7)) 
-
-widgetframe::frameWidget(table)
-```
+![](/img/tweet_table.png)
 
 
 ### Tweets over time
 
 Almost immediately after plotting tweets over time you can see that the total number of geotagged tweets is going down over time. Most noticeably, there is a significant drop in tweets at the end of April, 2015. It seems this is due "a change in Twitter’s ‘post Tweet’ user-interface design results in fewer Tweets being geo-tagged" ( [source](https://developer.twitter.com/en/docs/tweets/data-dictionary/guides/tweet-timeline)). The first 4 months of 2015 have 15,720 tweets, or roughly 19% of all tweets. To reduce a skew in the data and remove geotagged tweets that may have been geotagged without knowledge by the user in those months, *I moved forward with all tweets from May 1, 2015 through the end of 2019*.
 
-```{r tweets_over_time, fig.width = 10, fig.height = 5}
+```{r tweets_over_time}
 time_df <- read_csv("~/github/sb_sense_of_place/data/geotagged_sb_tweets.csv") %>%
   group_by(date) %>%
   summarize(count = n())
@@ -175,7 +171,7 @@ tweet_data_users_sf <- tweet_data_users %>%
 
 There are `r nrow(filter(tweet_data_users, user_type == "tourist"))` tweets from tourists and `r nrow(filter(tweet_data_users, user_type == "local"))` tweets from locals (`r round(nrow(filter(tweet_data_users, user_type == "tourist"))/nrow(tweet_data_users)*100,0)`% and `r round(nrow(filter(tweet_data_users, user_type == "local"))/nrow(tweet_data_users)*100,0)`%). There are `r nrow(tweet_data_users%>%filter(user_type == "tourist") %>% select(user_type, user_id) %>% distinct())` unique tourists and just `r nrow(tweet_data_users%>%filter(user_type == "local") %>% select(user_type, user_id) %>% distinct())` unique local users.
 
-```{r, fig.width = 8, fig.height = 8}
+```{r}
 #santa barbara
 sb.map <- get_map("santa barbara, california", zoom = 14, maptype = "toner-lite") 
 
@@ -192,11 +188,11 @@ ggmap(sb.map,  legend="none") +
         legend.position = "none")
 ```
 
-### Spatial preferences by user type
+## Spatial preferences by user type
 
 The following map shows areas that have more tweets from locals (orange) or tourists (purple). Note the values indicate the log10 of the absolute difference between number of tweets from each user group. So if a hex is purple and has a value of 2, this means there are 100 times more tweets from tourists than locals at that location.
 
-```{r, fig.width = 8}
+```{r}
 
 hex_grid <- read_sf("~/github/sb_sense_of_place/data/sb_area_hexagons.shp") %>%
   st_set_crs(st_crs(tweet_data_users_sf))
@@ -233,7 +229,7 @@ tl_map <- mapview(t, zcol = "log_value", layer.name = "Tourist preferred # tweet
 tl_map@map %>% setView(lng = -119.714, lat = 34.426, zoom = 13)
 ```
 
-## What tweets are "nature-based"?
+# What tweets are "nature-based"?
 
 For this project, we wanted to understand how these two groups engage with the natural environment within Santa Barbara, and whether or not patterns through time and space could be used to understand what is and is not important to people.
 
@@ -250,11 +246,11 @@ Let's look at some examples of what tweets qualified as "nature-based".
 ![](/img/nature_tweet_table.png)
 
 
-### Proportion of tweets considered "nature-based" over time
+## Proportion of tweets considered "nature-based" over time
 
 All groups show increases in proportion of tweets that are nature based over time, even as the number of geotagged tweets declines.
 
-```{r, fig.height = 4, fig.width = 8}
+```{r}
 nature_prop <- nature_df %>% 
                group_by(date, nature_word) %>%
                summarize(count = n()) %>%
@@ -294,7 +290,7 @@ ggplot(combo, aes(x = date, y = nature_prop, color = user_type)) +
                       labels = c("All tweets", "Tourists", "Locals"))
 ```
 
-### Where are people tweeting about nature?
+## Where are people tweeting about nature?
 
 ```{r}
 nature_sf <- nature_df %>%
@@ -302,7 +298,7 @@ nature_sf <- nature_df %>%
   st_set_crs(4326)
 ```
 
-```{r, fig.width = 6, fig.height = 6}
+```{r}
 #santa barbara
 sb.map <- get_map("santa barbara, california", zoom = 14, maptype = "toner-lite") 
 
@@ -319,7 +315,7 @@ ggmap(sb.map,  legend="none") +
 ```
 
 
-### Are tweets in protected areas more often nature-based?
+## Are tweets in protected areas more often nature-based?
 
 To link tweet locations to what exists at those locations we need to use a spatial dataset that tells us what is there. This could be roads, city parcel information, or in our case we are using protected areas from the [California Protected Areas Database](https://www.calands.org/). 
 
@@ -333,7 +329,7 @@ cpad_map <- mapview(cpad, zcol = "SITE_NAME", legend = FALSE)
 cpad_map@map %>% setView(lng = -119.714, lat = 34.426, zoom = 13)
 ```
 
-```{r, echo = FALSE, fig.width = 10}
+```{r, echo = FALSE}
 nature_sf <- nature_df %>%
     mutate(coords = gsub("\\)|c\\(", "", geo_coordinates)) %>%
     separate(coords, c("lat", "lon"), sep = ", ") %>%
@@ -404,8 +400,7 @@ ggplot(top_20, aes(x = reorder(SITE_NAME, count), fill = tweet_type, y = count))
 ```
 
 
-
-### Do tourists and locals visit the same or different nature sites?
+# Do tourists and locals visit the same or different nature sites?
 
 Going a bit further, we also looked at number of unique visitors to these CPAD sites. By calculating the proportion of unique tourists and locals that visit these sites, we start to look at who goes where. *This is not limiting tweets to only those that are nature-based.*
 
@@ -482,7 +477,7 @@ p1 <- ggplot(twt_df, aes(x = local, y = tourist)) +
 
 ```
 
-```{r, fig.width = 9, fig.height = 5}
+```{r}
 
 lower_end <- twt_df %>% 
   filter(local < 0.04 & tourist < 0.04) %>%
@@ -513,10 +508,10 @@ The top graph shows the total number of geotagged tweets, which has gone down ov
 
 The bottom graph shows average daily sentiment scores over time. Above 0 is positive, below 0 is negative. We see that tweets are mostly positive and growing over time.
 
-#### Changes over time {.tabset .tabset-fade}
+#### Changes over time {.tabset .tabset-fade .tabset-pills}
 
 ##### All tweets 
-```{r, fig.height = 5}
+```{r}
 #sentiment score over time for all tweets
 bing_scores <- read_csv("~/github/sb_sense_of_place/data/all_tweets_bing_score.csv") %>%
   mutate(type = "all_tweets")
@@ -565,7 +560,7 @@ p1 + p2 + plot_layout(ncol=1)
 ```
 
 ##### Tourists
-```{r, fig.height = 5}
+```{r}
 #sentiment scores for tourists - nature and nonnature
 t_n <- bing_scores %>%
   filter(user_type == "tourist" & nature_word == 1) %>%
@@ -616,7 +611,7 @@ p1 + p2 + plot_layout(ncol=1)
 ```
 
 ##### Locals
-```{r, fig.height = 5}
+```{r}
 
 l_n <- bing_scores %>%
   filter(user_type == "local" & nature_word == 1) %>%
